<resources>
    <string name="app_name">PrimeraApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo1">Welcome</string>
    <string name="titulo2">Welcome:</string>
    <string name="Registro">Log in</string>
    <string name="Iniciar_Sesion">Sign in</string>
    <string name="Nombre_Usuario">Name</string>
    <string name="Constrasena">Password</string>
    <string name="Atras">Go back</string>
    <string name="Recuperar_Contrasena">Forgot your password</string>
    <string name="Email">Email</string>
    <string name="Telefono">Phone</string>
    <string name="Terminos1"> Accept the terms</string>
    <string name="Terminos2"> Confirm the terms</string>
    <string name="Acept">Acept</string>
    <string name="Cancel">Cancel</string>
    <string name="Ejercicios">Workout</string>
    <string name="videosE">Training Videos</string>

    <string name="hombre">Man</string>
    <string name="mujer">Woman</string>
    <string name="Chest_exercises">Chest exercises</string>
    <string name="Back_exercises">Back exercises</string>
    <string name="Shoulder_exercises">Shoulder exercises</string>
    <string name="Abdominal_exercises">Abdominal exercises</string>
    <string name="Ejercicio3">Biceps / Triceps exercises</string>
    <string name="Photo">Photo</string>
    <string name="Item1">Go to exercice</string>
    <string name="Item2">Go back</string>
    <string name="Item3">Log Out</string>
    <string name="Item4">Delete Photo</string>
    <string name="datos">Check the termens</string>
    <string name="guardar">Save</string>
    <string name="eliminar">Delete</string>
    <string name="info">
        We collect information to provide better services to all our users — from figuring out basic stuff like which language you speak, to more complex things
        like which ads you’ll find most useful, the people who matter most to you online, or which YouTube videos you might like.
        The information Google collects, and how that information is used, depends on how you use our services and how you manage your privacy controls.
        When you’re not signed in to a Google Account, we store the information we collect with unique identifiers tied to the browser, application, or device you’re using.
        This helps us do things like maintain your language preferences across browsing sessions.
        We collect information about your activity in our services, which we use to do things like recommend a YouTube video you might like.
        The activity information we collect may include:
        Terms you search for
        Videos you watch
        Views and interactions with content and ads
        Voice and audio information when you use audio features
        Purchase activity
        People with whom you communicate or share content
        Activity on third-party sites and apps that use our services
        Chrome browsing history you’ve synced with your Google Account
    </string>
    <string name="btnUpdate">Update</string>
    <string name="textPerfil">Update User Profile</string>
    <string name="title_home">Home</string>
</resources>