<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context="actPrincipales.Activity5_Musculacion">

    <Button
        android:id="@+id/button8"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:background="@drawable/button_ro"
        android:onClick="Atras"
        android:text="@string/Atras"
        android:textColor="@color/colorBordes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/button15"
        android:layout_width="126dp"
        android:layout_height="109dp"
        android:background="@drawable/button_ro"
        android:onClick="SiguienteAbdominales"
        android:text="@string/Abdominal_exercises"
        android:textColor="@color/colorBordes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/button13"
        android:layout_width="126dp"
        android:layout_height="109dp"
        android:background="@drawable/button_ro"
        android:onClick="SiguienteEspalda"
        android:text="@string/Back_exercises"
        android:textColor="@color/colorBordes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/button12"
        android:layout_width="126dp"
        android:layout_height="109dp"
        android:background="@drawable/button_ro"
        android:onClick="SiguienteHombro"
        android:text="@string/Shoulder_exercises"
        android:textColor="@color/colorBordes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <Button
        android:id="@+id/button14"
        android:layout_width="126dp"
        android:layout_height="109dp"
        android:background="@drawable/button_ro"
        android:onClick="SiguienteBrazo"
        android:text="@string/Ejercicio3"
        android:textColor="@color/colorBordes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <Button
        android:id="@+id/button2"
        android:layout_width="126dp"
        android:layout_height="109dp"
        android:background="@drawable/button_ro"
        android:onClick="SiguientePecho"
        android:text="@string/Chest_exercises"
        android:textColor="@color/colorBordes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973"
        app:srcCompat="@drawable/inicio" />
</androidx.constraintlayout.widget.ConstraintLayout>