<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".terminos">


    <CheckBox
        android:id="@+id/ckBox1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="148dp"
        android:onClick="onclick"
        android:text="@string/Terminos1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefono"
        app:layout_constraintVertical_bias="0.579" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="253dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="271dp">

        <TextView
            android:id="@+id/informacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

    <RadioButton
        android:id="@+id/rButton1"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="186dp"
        android:onClick="onclick"
        android:text="@string/datos"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="600dp" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="256dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/button_ro"
        android:onClick="onclick"
        android:text="@string/Acept" />

</RelativeLayout>